--- a/css/styles.css
+++ b/css/styles.css
@@ -67,6 +67,10 @@ button {
   color: var(--accent-color);
 }
 
+.current {
+  color: var(--accent-color);
+}
+
 /* ========== contact ========== */
 
 .page-header .contact-link {
@@ -195,20 +199,20 @@ button {
 
 /* ========== portfolio ========== */
 
-.portfolio {
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.88;
-  letter-spacing: 0.03em;
-  color: var(--primary-text-color);
-}
-
 .portfolio-subtitle {
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
   color: var(--title-text-color);
+}
+
+.portfolio-text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.03em;
+  color: var(--primary-text-color);
 }
 
 /* ========== footer ========== */
